# crawfish

./: .gitignore  .gitmodules  AGENT-TEAMS.md  BENCH-PROTOCOL.md  BRAINSTORM.md  BUILD-LOG.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  FEATURES.md  GOVERNANCE.md  GRAND_PLAN.md  INTEGRATIONS.md  LAUNCH-CHECKLIST.md  MAINTAINERS.md  NOTICE  PRODUCT.md  README.md  RELEASING.md  ROADMAP-MVP.md  ROADMAP-WAVE3.md  ROADMAP.md  RUNNING.md  SECURITY.md  SKILL_SETUP.md  build-app.sh  crawfish-dash  crawfish-lens  crawfish.toml.example  dev.sh  install.sh  justfile  mkdocs.yml  package.json  prod.sh  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  RELEASING.md  SECURITY.md  labels.yml
.impeccable/: design.json
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
bench/: prompts.md
crawfish-opt-artifact/: package.json
crawfish-opt-logs/: package.json
crawfish-orgctl/: README.md  package-lock.json  package.json
crawfish-platform/: package-lock.json  package.json  vite.config.ts
crawfish-projectctl/: README.md  package.json  tsconfig.json
crawfish-server/: .env.example  README.md  package-lock.json  package.json
crawfish-web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
demo/: README.md
dev_docs/: BUILD-LOG.md  DOC_REWRITE_PROMPT.md  HOW_TO_WRITE_DOCS.md  WRITING_STYLE.md
docs/: README.md  crawfish-hardening-prompt.md  index.md
e2e/: global-setup.ts  helpers.ts  package-lock.json  (+2 more)
(+575 files in other folders)
